+ added property-files for translating .js files (daburna)
+ added UTF-8 for all xml files (daburna)
+ added missing css for QPH at statusbar (daburna)
+ added bookmark icon (daburna)

v 0.2.3 - 23.01.2008
=====================================================================
+ added entitys (daburna)
+ added english languagefile (daburna)
+ added german languagefile (daburna)

v 0.2.2 - 15.01.2008
=====================================================================
X Fixed wrong demopeerlist (daburna)
+ added QPH at statusbar (daburna)