@@ -2,6 +2,7 @@
 + added UTF-8 for all xml files (daburna)
 + added missing css for QPH at statusbar (daburna)
 + added bookmark icon (daburna)
+- removed "order by"-function  
 
 v 0.2.3 - 23.01.2008
 =====================================================================
